fixed button wrap

--- a/css/custom.css
+++ b/css/custom.css
@@ -360,6 +360,9 @@ footer img{
 #annuncio{
   width: 100%;
   padding: 5px;
-  font-size: 13px;
+  font-size: 1.5rem;
   margin-bottom: 15px;
+}
+.btn {
+  white-space: normal;
 }
